--- a/ui/trojaneditdialog.ui
+++ b/ui/trojaneditdialog.ui
@@ -137,7 +137,7 @@
           <item row="7" column="0">
            <widget class="QLabel" name="label_10">
             <property name="text">
-             <string>Session Ticker</string>
+             <string>Session Ticket</string>
             </property>
            </widget>
           </item>
