--- a/ui/trojangowidget.ui
+++ b/ui/trojangowidget.ui
@@ -116,7 +116,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_8">
          <property name="text">
-          <string>Mehod</string>
+          <string>Method</string>
          </property>
         </widget>
        </item>
