--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>634</width>
-    <height>532</height>
+    <width>659</width>
+    <height>556</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -213,84 +213,84 @@
            </property>
           </widget>
          </item>
-         <item row="9" column="0">
+         <item row="10" column="0">
           <widget class="QLabel" name="enableNotificationLabel">
            <property name="text">
             <string>Enable Notification</string>
            </property>
           </widget>
          </item>
-         <item row="9" column="1">
+         <item row="10" column="1">
           <widget class="QCheckBox" name="enableNotificationCheckBox">
            <property name="text">
             <string>Enable</string>
            </property>
           </widget>
          </item>
-         <item row="10" column="0">
+         <item row="11" column="0">
           <widget class="QLabel" name="hideDockIconLabel">
            <property name="text">
             <string>Hide Dock Icon (macOS)</string>
            </property>
           </widget>
          </item>
-         <item row="10" column="1">
+         <item row="11" column="1">
           <widget class="QCheckBox" name="hideDockIconCheckBox">
            <property name="text">
             <string>Enable</string>
            </property>
           </widget>
          </item>
-         <item row="11" column="0">
+         <item row="12" column="0">
           <widget class="QLabel" name="startAtLoginLabel">
            <property name="text">
             <string>Start at login</string>
            </property>
           </widget>
          </item>
-         <item row="11" column="1">
+         <item row="12" column="1">
           <widget class="QCheckBox" name="startAtLoginCheckbox">
            <property name="text">
             <string>Enable</string>
            </property>
           </widget>
          </item>
-         <item row="12" column="0">
+         <item row="13" column="0">
           <widget class="QLabel" name="hideWindowsOnStartupLabel">
            <property name="text">
             <string>Hide windows on startup</string>
            </property>
           </widget>
          </item>
-         <item row="12" column="1">
+         <item row="13" column="1">
           <widget class="QCheckBox" name="hideCheckBox">
            <property name="text">
             <string>Enable</string>
            </property>
           </widget>
          </item>
-         <item row="13" column="0">
+         <item row="14" column="0">
           <widget class="QLabel" name="useNativeMenuBar">
            <property name="text">
             <string>Use native menubar</string>
            </property>
           </widget>
          </item>
-         <item row="13" column="1">
+         <item row="14" column="1">
           <widget class="QCheckBox" name="nativeMenuBarCheckBox">
            <property name="text">
             <string>Enable</string>
            </property>
           </widget>
          </item>
-         <item row="14" column="0">
+         <item row="15" column="0">
           <widget class="QLabel" name="label_13">
            <property name="text">
             <string>Show Airport &amp; Donation</string>
            </property>
           </widget>
          </item>
-         <item row="14" column="1">
+         <item row="15" column="1">
           <widget class="QCheckBox" name="showAirportAndDonationCB">
            <property name="text">
             <string>Enable</string>
@@ -357,6 +357,20 @@
              <string>Follow System</string>
             </property>
            </item>
+          </widget>
+         </item>
+         <item row="9" column="0">
+          <widget class="QLabel" name="label_43">
+           <property name="text">
+            <string>Check Time on startup</string>
+           </property>
+          </widget>
+         </item>
+         <item row="9" column="1">
+          <widget class="QCheckBox" name="checkTimeOnStartupCB">
+           <property name="text">
+            <string>Enable</string>
+           </property>
           </widget>
          </item>
         </layout>
